adding note about doc search from workbench.

--- a/bundles/org.eclipse.platform.doc.user/tasks/tsearch.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tsearch.htm
@@ -26,6 +26,10 @@ are looking for.</p>
   <li>To view the content of a topic in the result set, select it. Hits within 
   the selected topic are highlighted.</li>
 </ol>
+<p><b>Tip:</b> You can also search the documentation from inside the workbench by
+selecting <b>Search &gt; Help</b>. Type in search terms, optionally select the books you
+want to search, and click <b>Search</b>. The results will be shown in the Search view. 
+Double-click a result to open the help browser to that topic.</p>
 <p>Remember the following search expression rules: </p>
     <ul>
       <li>Unless otherwise stated, there is an implied AND between all search
