*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-171.htm
@@ -18,6 +18,16 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head"> Using templates</h1>
-<p><br></p>
+<p>&nbsp;</p>
+<p>To use templates:</p>
+<ul>
+  <li> In the Java editor, position the caret in a place where you want to insert 
+    a template.</li>
+  <li>Invoke content assist by pressing Ctrl+Space.</li>
+  <li>Templates show up in the presented list. Note that the list is filtered 
+    as you type, so typing a few first character of a template name will reveal 
+    it.<br>
+  </li>
+</ul>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
