--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-172.htm
@@ -13,11 +13,24 @@
 
   
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Using templates</title>
+  <title>Converting line delimiters</title>
 
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head"> Converting line delimiters</h1>
-<p><br></p>
+<p>Java editor can diplay Java files with various line delimiter kinds but some 
+  other external editors may not be able to handle them correctly.</p>
+<p>You may want to change line delimiters used by your Java files.</p>
+<p>It may also happen that a file has heterogenous line delimiters and you want 
+  to unify them.</p>
+<p>&nbsp;</p>
+<p>To convert line delimiters in Java files: <br>
+</p>
+<ul>
+  <li>Open a Java file in the Java editor</li>
+  <li>Select <b>Source &gt; Convert Line Delimiters</b> from the menu bar</li>
+  <li>Select the delimiters you want to convert the file to (one of <b>Windows</b>, 
+    <b>UNIX</b>, <b>Mac</b>)</li>
+</ul>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
