--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-11.htm
@@ -11,7 +11,7 @@
 Markers</H1>
 <p CLASS="Head">Markers are objects that may be associated with workbench
 resources.&nbsp; There are many uses of markers in the workbench.&nbsp; Described below are
-the different types of markers that can be used in the
+some of the different types of markers that can be used in the
 workbench.&nbsp;&nbsp;</p>
 <DIV CLASS="Subtopic">
 <h3>
