--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27.htm
@@ -40,26 +40,22 @@
 
 
 <P CLASS="Para">
-<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><a href="concepts-27b.htm"><br>
-</a>
-<a href="concepts-27c.htm">Repositories<br>
-</a><a href="concepts-27b.htm">
-Streams</a><br>
-<a href="concepts-17a.htm">Local history</a><br>
-<a href="concepts-30.htm">Team synchronization</a><a href="concepts-12.htm"><br>
-Resources</a></P>
+<img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="concepts-27c.htm">CVS Repositories</a>
+<br><a href="concepts-27b.htm">Branches</a>
+<br><a href="concepts-17a.htm">Local history</a>
+<br><a href="concepts-12.htm">Resources</a>
+</P>
+
 <P CLASS="Para">
-<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-100.htm"><br>
-Creating a version of a project</a><a href="../tasks/tasks-118.htm"><br>
-Versioning projects in the team stream<br>
-</a><a href="../tasks/tasks-107b.htm">Showing version information</a> <br>
-<a href="../tasks/tasks-114.htm">Releasing</a><br>
-<a href="../tasks/tasks-100a.htm">Splitting resources from a stream</a><br>
-<a href="../tasks/tasks-115.htm">Synchronizing</a><a href="../tasks/tasks-118.htm"><br>
-</a><a href="../tasks/tasks-105.htm">Changing team settings</a></P>
-<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-Automatic version labeling schema</a><br>
-<a href="../reference/ref-48c.htm">CVS version label syntax rules</a><br>
+<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="../tasks/tasks-100.htm">Creating a version of a project</a>
+<br><a href="../tasks/tasks-118.htm">Versioning projects in the repository</a>
+<br><a href="../tasks/tasks-107b.htm">Enabling the CVS resource decorations</a>
+</P>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
+<br><a href="../reference/ref-47.htm">CVS</a>
 </p>
 
 <P><br>
