Changed matching target.

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_contributing_task.htm
@@ -83,7 +83,7 @@ The following should work as a checklist for plug-in developers:</p>
 </ul>
 
 
-<a NAME="jar"></A>
+<A NAME="jar"></A>
 <h3>Why a separate JAR for tasks and types?</h3>
 <p>
 There are basically two requirements for running Ant in Eclipse that do not fit
