--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-27c.htm
@@ -25,32 +25,22 @@ You can find more information on CVS at <A HREF="http://www.cvshome.org" CLASS="
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="concepts-26.htm">Team programming</a> &nbsp;<a href="concepts-27c.htm"><br>
-</a><a href="concepts-27v.htm">Repositories view</a><a href="concepts-27b.htm"><br>
-Streams</a><a href="concepts-27.htm"><br>
-Resource versions<br>
+<a href="concepts-26.htm">Team programming with CVS</a>
+<a href="concepts-27b.htm"><br>
+Branches</a><a href="concepts-27.htm"><br>
+Versions<br>
 </a><a href="concepts-17a.htm">Local history</a></p>
 
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-92.htm"><br>
-Creating a repository location</a><a href="../tasks/tasks-93.htm"><br>
-Refreshing the repository view</a><a href="../tasks/tasks-96.htm"><br>
-Adding resources from a repository to the workbench</a>&nbsp;<a href="../tasks/tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="../tasks/tasks-111.htm"><br>
-Creating a new stream</a><a href="../tasks/tasks-117.htm"><br>
-Associating a project with a stream</a><a href="../tasks/tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="../tasks/tasks-113.htm"><br>
-Catching up</a><a href="../tasks/tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="../tasks/tasks-87.htm"><br>
-Replacing a resource with local history</a><a href="../tasks/tasks-88.htm"><br>
-Setting local history preferences</a>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+<br><a href="../tasks/tasks-92.htm">Creating a CVS repository location</a>
 </p>
 
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a>
+</a><a href="../reference/ref-47.htm">
+CVS</a>
+<br><a href="../reference/ref-32.htm">CVS Repositories view</a>
 </p>
 
 <p>&nbsp;<br>
