*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-177.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-177.htm
@@ -18,6 +18,29 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Commenting and uncommenting lines of code</h1>
-<p><br></p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p>&nbsp;</p>
+<p>To comment lines of code in the Java editor:</p>
+<ul>
+  <li> Select the lines you wish to comment</li>
+  <li>Do one of the following:
+    <ul>
+      <li>Press <b>Ctrl+/</b> or </li>
+      <li>Select <b>Source &gt; Comment</b> from the menu bar<br>
+      </li>
+    </ul>
+  </li>
+</ul>
+<p>&nbsp;To uncomment lines of code in the Java editor:</p>
+<ul>
+  <li> Select the lines you wish to uncomment</li>
+  <li>Do one of the following: 
+    <ul>
+      <li>Press <b>Ctrl+\</b> or </li>
+      <li>Select <b>Source &gt; Uncomment</b> from the menu bar<br>
+      </li>
+    </ul>
+  </li>
+</ul>
+<p></p>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
