--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-178.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-178.htm
@@ -18,6 +18,27 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Indenting and outdenting lines of code</h1>
-<p><br></p>
+<p><br>
+  To indent lines of code in the Java editor:</p>
+<ul>
+  <li> Select the lines you wish to comment</li>
+  <li>Do one of the following: 
+    <ul>
+      <li>Press <b>Tab</b> or </li>
+      <li>Select <b>Source &gt; Shift Right </b> from the menu bar<br>
+      </li>
+    </ul>
+  </li>
+</ul>
+<p>&nbsp;To outdent lines of code in the Java editor:</p>
+<ul>
+  <li> Select the lines you wish to outdent</li>
+  <li>Do one of the following: 
+    <ul>
+      <li>Press <b>Shift+Tab</b> or </li>
+      <li>Select <b>Source &gt; Shift Left</b> from the menu bar</li>
+    </ul>
+  </li>
+</ul>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
