--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
@@ -9,19 +9,13 @@
 <div class=Section1> 
   <h1>Showing and hiding CLASS files generated for inner types</h1>
   <p class=para>To show CLASS files for inner types:</p>
-  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select the <span class=label><b>Filters</b></span> command from the 
-    Package Explorer drop-down menu. </p>
-  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Ensure that the <span class=filename><b>Hide anonymous inner class 
-    files</b></span>&nbsp;filter is not selected.</p>
+  <p class=para> 1.Select the <b>Filters</b> command from the Package Explorer drop-down menu. </p>
+  <p class=para> 2. Ensure that the <b>Hide anonymous inner class 
+    files</b>&nbsp;filter is not selected.</p>
   <p class=para>To hide CLASS files for inner types:</p>
-  <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Select the <span class=label><b>Filters</b></span> command from the 
-    Package Explorer drop-down menu.</p>
-  <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> Ensure that the <span class=filename>&nbsp;<b>Hide anonymous inner 
-    class files</b></span>&nbsp;filter is selected.</p>
+  <p class=para> 1.Select the <b>Filters</b> command from the Package Explorer drop-down menu.</p>
+  <p class=para> 2.Ensure that the <b>Hide anonymous inner 
+    class files</b>&nbsp;filter is selected.</p>
   <p class=para><img width=159 height=27 id="_x0000_i1025"
 src="../images/ngrelt.gif" alt="Related tasks" border=0></p>
   <p class=para><a href="tasks-2.htm">Showing and hiding files</a></p>
