--- a/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cantsup.htm
@@ -15,17 +15,24 @@ Ant is a build tool similar to the &quot;make&quot; feature, but written in Java
 It is an Apache open source project.&nbsp;See <a href="http://jakarta.apache.org/ant/index.html" target="_blank">http://jakarta.apache.org/ant/index.html</a>
 for more details.  </P>
 <P CLASS="Para">
-The Ant support allows you to create and run Ant scripts
-from the workbench.&nbsp;
-These Ant scripts can operate on resources in the file system as well as
-resources in the workspace. Output from an Ant script is displayed in the log console view.
+The Ant support allows you to create and run Ant build files from the 
+workbench.&nbsp;
+These Ant build files can operate on resources in the file system as well as
+resources in the workspace. 
+</P>
+<P CLASS="Para">
+Output from an Ant build file is displayed in the log console view. Ant output 
+can optionally be displayed in a structured format. Targets and tasks are shown 
+in a tree hierarchy if the output structure tree is enabled in the log console.
 </P>
 <P CLASS="Para">
 You can add classes to the Ant classpath and add Ant tasks and types in the <b>Workbench->External Tools->Ant</b> preferences.
 </P>
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-22.htm">Builds</a></p>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+<br><a href="../concepts/concepts-22.htm">Builds</a>
+<br><a href="../concepts/cexttools.htm">External tools</a>
+</p>
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-89.htm">Running Ant</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
