--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -10,36 +10,36 @@
 <H1 CLASS="Head" dir="ltr">
 Features</H1>
 
-<p>On disk, an Eclipse-based product is structured as a collection of <b>plug-ins</b>.
+<p>On disk, an Eclipse-based product is structured as a collection of <em>plug-ins</em>.
 Each plug-in contains the code that provides some of the product's
 functionality. The code and other files for a plug-in are installed on the local
 computer, and get activated automatically as required. A product's plug-ins are
-grouped together into features. A <b>feature</b> is the smallest unit of separately downloadable and installable
+grouped together into features. A <em>feature</em> is the smallest unit of separately downloadable and installable
 functionality. (The notion of a feature is new for Eclipse 2.0; it replaces the similar
 notion of component in Eclipse 1.0.) </p>
-<p>The fundamentally modular nature of the Eclipse platform makes it easy for
-the user to install additional features and plug-ins into an Eclipse-based
-product, and to update the product's existing features and plug-ins. The user
-can do either using traditional native installers running separate from Eclipse,
-or using the Eclipse platform's own update manager. The Eclipse <b>update
-manager</b> can be used to discover, download, and install updated features and
+<p>The fundamentally modular nature of the Eclipse platform makes it easy 
+to install additional features and plug-ins into an Eclipse-based
+product, and to update the product's existing features and plug-ins. You 
+can do this either by using traditional native installers running separately from Eclipse,
+or by using the Eclipse platform's own update manager. The Eclipse <em>update
+manager</em> can be used to discover, download, and install updated features and
 plug-ins from special web-based Eclipse update sites.</p>
-<p>The basic underlying mechanism is simple enough: the files for a feature or
+<p>The basic underlying mechanism of the update manager is simple: the files for a feature or
 plug-in are always stored in a subdirectory whose name includes a version
-identifier (e.g., &quot;2.0.0&quot;); different versions of a feature or plug-in
+identifier (e.g., &quot;2.0.0&quot;). Different versions of a feature or plug-in
 are always given different version identifiers, thereby ensuring that the
-multiple versions of the same feature or plug-in can co-exist side by side on
+multiple versions of the same feature or plug-in can co-exist on
 disk. This means that installing or updating features and plug-ins requires
 adding more files, but never requires deleting or overwriting existing files.
 Once the files are installed on the local computer, the new feature and plug-in
 versions are available to be configured. The same installed base of files is
-therefore capable of supporting many different <b>configurations</b>
+therefore capable of supporting many different <em>configurations</em>
 simultaneously; installing and upgrading an existing product are reduced to
-formulating a configuration incrementally better than the current one. Important
-configurations can be saved for posterity, and restored to active service in the
+formulating a configuration incrementally newer than the current one. Important
+configurations can be saved and restored to active service in the
 event of an unsuccessful upgrade.</p>
 
-<p>The <b>About</b> item on the <b>Help</b> menu provides information about installed features and plug-ins. 
+<p>The <b>About</b> option on the <b>Help</b> menu provides information about installed features and plug-ins. 
 The <b>Software Updates</b> submenu on the <b>Help</b> menu groups together items for updating existing features, and 
 for finding, downloading, and installing new features.
 </p>
