--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -14,7 +14,7 @@ New perspectives</h3>
 this workbench window:</p>
 <ul>
   <li>
-    Using the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives" width="24" height="25">
+    Using the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives">
     on the shortcut bar.</li>
   <li>
     Choosing a perspective from the Window &gt; Open Perspective menu.&nbsp;</li>
@@ -28,7 +28,7 @@ this workbench window:</p>
         <p CLASS="Para"><b>1.</b></p>
       </td>
       <td valign="top" align="left">
-        <p CLASS="Para">Click on the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives" width="24" height="25">.&nbsp;</p>
+        <p CLASS="Para">Click on the Open Perspective button <img align="texttop" border="0" src="../images/Image70_shortcut2.jpg" alt="Open Perspectives">.&nbsp;</p>
       </td>
     </tr>
     <tr>
@@ -39,7 +39,7 @@ this workbench window:</p>
         <p CLASS="Head">A menu appears showing the same choices as shown on the
         Window &gt; Open Perspective menu. Choose Other... from the menu.</p>
         <blockquote>
-          <p CLASS="Head"><img align="texttop" border="0" src="../images/Image70_shortcut3.jpg" alt="Open Perspective Menu" width="10" height="10"></p>
+          <p CLASS="Head"><img align="texttop" border="0" src="../images/Image70_shortcut3.jpg" alt="Open Perspective Menu"></p>
         </blockquote>
       </td>
     </tr>
@@ -51,7 +51,7 @@ this workbench window:</p>
         <p CLASS="Para">In the Select Perspective dialog
         choose Debug and click OK.&nbsp;
         <blockquote>
-        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image70_select_pers.jpg" alt="Select Perspective" width="245" height="312">
+        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image70_select_pers.jpg" alt="Select Perspective">
         </blockquote>
       </td>
     </tr>
@@ -79,7 +79,7 @@ this workbench window:</p>
             <p CLASS="Para">The shortcut bar now contains two perspectives, the original
             Resource perspective and the new Debug perspective.&nbsp;The Debug perspective button is pressed-in indicating that it is the
             current perspective.<br>
-            <img align="texttop" border="0" src="../images/Image70_shortcut4.jpg" alt="Debug Perspective" width="139" height="183"></li>
+            <img align="texttop" border="0" src="../images/Image70_shortcut4.jpg" alt="Debug Perspective"></li>
         </ul>
       </td>
     </tr>
@@ -112,7 +112,7 @@ will observe that our shortcut bar now has three areas:</p>
 </ol>
 <blockquote>
   <p CLASS="Head">
-<img align="texttop" border="0" src="../images/Image70_shortcut1.jpg" alt="Resource Perspective" width="351" height="368">&nbsp;</p>
+<img align="texttop" border="0" src="../images/Image70_shortcut1.jpg" alt="Resource Perspective">&nbsp;</p>
 </blockquote>
 <p CLASS="Head">In step 6 above we observed that the set of views are different between the open perspectives. Similarly each perspective has its own
 list of fast views.&nbsp;</p>
