--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-9c.htm
@@ -14,7 +14,7 @@ Working with fast views</H1>
 <p CLASS="Head">If you have converted the Navigator to a fast view it will
 appear in the shortcut bar as shown below.&nbsp;</p>
 <blockquote>
-  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg" width="67" height="175" alt="Show fast view"></p>
+  <p CLASS="Head"><img align="texttop" border="0" src="../images/Image60_fast_view1.jpg"  alt="Show fast view"></p>
 </blockquote>
   <p CLASS="Head">To work with a fast view proceed as follows.</p>
 <TABLE BORDER="0" cellspacing="0" cellpadding="3">
@@ -42,7 +42,7 @@ appear in the shortcut bar as shown below.&nbsp;</p>
 <P CLASS="Para">
 Observe the Navigator view slides out from the shortcut bar.&nbsp; </P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg" width="368" height="283" alt="Fast view"> </P>
+<img align="texttop" border="0" src="../images/Image61_nav_fast.jpg"  alt="Fast view"> </P>
 </TD>
 </TR>
 <TR>
@@ -67,7 +67,7 @@ You can use the Navigator fast view as you would normally.&nbsp;&nbsp; </P>
 To hide the fast view simply click off of it or click on the Minimize button on
 the fast view's toolbar </P>
 <P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image61_fast_minimize.jpg" width="264" height="69" alt="Minimze button"> </P>
+<img align="texttop" border="0" src="../images/Image61_fast_minimize.jpg"  alt="Minimze button"> </P>
 <P CLASS="Para">&nbsp; </P>
 <P CLASS="Para">Note: If you open a file from the Navigator fast view, the fast
 view will automatically hide itself to allow you to work with the
@@ -82,20 +82,20 @@ file.&nbsp;&nbsp; </P>
 
 <ul>
   <li>Click the Restore button on the fast view's toolbar <br>
-    <img align="texttop" border="0" src="../images/Image61_fast_restore.jpg" width="264" height="69" alt="Pin button"><br>
+    <img align="texttop" border="0" src="../images/Image61_fast_restore.jpg"  alt="Pin button"><br>
   </li>
   <li>Choose Restore from the context menu of the icon in the top left corner of
     the view. </li>
 </ul>
 
 
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." ><br>
 <a href="../concepts/concepts-5.htm">Views</a><br>
 <a href="../concepts/concepts-21.htm">Fast views</a><br>
 <a href="../concepts/concepts-4.htm">Perspectives</a>
 </p>
 
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" ><br>
 <a href="tasks-9b.htm">Creating fast views</a><br>
 <a href="tasks-3.htm">Opening views</a><br>
 <a href="tasks-3e.htm">Docking views</a><br>
