--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02d.htm
@@ -23,7 +23,9 @@ will be prompted to save your editor's changes.</P>
 
 
 <p class="Para">When an editor is active the workbench menubar and toolbar contain
-operations applicable to the editor.</p>
+operations applicable to the editor. When a view becomes active, the editor
+operations are disabled. However, in some cases, certain editor may be
+appropriate in the context of a view and will remain enabled.</p>
 
 
 <P CLASS="Para">
