--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -49,7 +49,7 @@ for sorting and filtering are commonly found on the view pull-down.&nbsp;</P>
  good opportunity to use the Perspective &gt; Reset menu operation. The reset
 operation restores the layout&nbsp; to its original state.&nbsp;</P>
 <P CLASS="Para">
-You can display a view by selecting it from the Window &gt; Show View
+You can display a view by selecting it from the <b> Window &gt; Show View</b>
 menu. A perspective determines the views you are likely to need and shows these on the
 Show View submenu. Additional views are available by choosing
 Other... at the bottom of the Show View submenu. As we will see later this is
