--- a/bundles/org.eclipse.platform.doc.user/about.html
+++ b/bundles/org.eclipse.platform.doc.user/about.html
@@ -1,20 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
-
 <html>
 <head>
 <title>About</title>
-<LINK REL="STYLESHEET" HREF="book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1">
 </head>
-<body lang="EN-US" link="blue" vlink="purple">
-<table border="0" cellspacing="5" cellpadding="2" width="100%" >
-  <tr> 
-    <td align="LEFT" valign="TOP" colspan="2" bgcolor="#0080C0"><b><font color="#FFFFFF">About This Content</font></b></td>
-  </tr>
-  <tr> 
-    <td> 
-<p>17th June, 2002</p>	
+<body lang="EN-US">
+<h2>About This Content</h2>
+ 
+<p>20th June, 2002</p>	
 <h3>License</h3>
 <p>Eclipse.org makes available all content in this plug-in (&quot;Content&quot;).  Unless otherwise indicated below, the Content is provided to you under the terms and conditions of the
 Common Public License Version 1.0 (&quot;CPL&quot;).  A copy of the CPL is available at <a href="http://www.eclipse.org/legal/cpl-v10.html">http://www.eclipse.org/legal/cpl-v10.html</a>.
@@ -32,12 +25,6 @@ host of Eclipse.org, by you that relate to such Content are provided under terms
 to others under the terms of the Other License.  In addition, with regard to Modifications for which you are the copyright holder, you are also
 providing the Modifications under the terms and conditions of the CPL and such Modifications can be made available to others under the terms of
 the CPL.</p>
-</td></tr></table>
 
-&nbsp;
-<p>
-
-<img src = "images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" >
-</p>
 </body>
 </html>
