--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-10b.htm
@@ -31,30 +31,37 @@ Select the JanesFile.txt editor tab.&nbsp;</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>2.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 In the text area add a 6th line of text:
 <blockquote>
-  <p><i>This is a 6th line</i></p>
+  <p CLASS="Para">This is a 6th line</p>
 </blockquote>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>3.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
 To close the editor, do one of the following options:</P>
 <ul>
   <li>
+    <p CLASS="Para">
     Click the close button (&quot;X&quot;)
     <img align="texttop" border="0" src="../images/Image19_close_on_tab.jpg"  alt="Editor Tab" width="124" height="26">
-    in the tab of any open editor.&nbsp;</p>
+    in the tab of any open editor.&nbsp;
   </li>
   <li>
-    Chose File &gt; Close from the menubar.</p>
+    <p CLASS="Para">
+    Chose File &gt; Close from the menubar.
   </li>
 </ul>
 </TD>
