--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-4.htm
@@ -26,9 +26,10 @@ later.&nbsp;&nbsp;</p>
 <P CLASS="Para" Label=Type>You can set your workbench preferences to open
 perspectives in the same window or in a new window.</p>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts." width="159" height="27"><br>
-<a href="concepts-2.htm">The workbench<br>
-</a><a href="concepts-5.htm">Views</a><a href="concepts-7.htm"><br>
-Action sets</a></p>
+<a href="concepts-2.htm">The workbench</a><br>
+<a href="concepts-6.htm">Editors</a><br>
+<a href="concepts-5.htm">Views</a><br>
+<a href="concepts-7.htm">Action sets</a></p>
 <P CLASS="Para" Label=Type><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="../tasks/tasks-9f.htm"><br>
 Opening perspectives<br>
 </a><a href="../tasks/tasks-3.htm">Opening views</a><br>
