--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
@@ -28,9 +28,10 @@
    assistive technology.</li>
    <li>You can operate all features using the keyboard instead of the mouse. See 
    the related task. </li>
-   <li>You can use screen-reader software such as JAWS and a digital speech synthesizer to hear what is displayed on the 
+   <li>You can use screen-reader software such as Freedom Scientifics JAWS <sup>TM</sup>
+    and a digital speech synthesizer to hear what is displayed on the 
    screen. You can also use voice recognition software,
-   such as IBM ViaVoice, to enter data and to navigate the user 
+   such as IBM ViaVoice <sup>TM</sup> to enter data and to navigate the user 
    interface.</li>
    <li>You can magnify what is displayed on your screen in the graphical views.
    </li>
@@ -48,6 +49,12 @@
 
  
  <p><a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
+
+ 
+ <p>&nbsp;</p>
+
+ 
+ <p>&nbsp;</p>
 
  
 <p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a></p>
