--- a/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/crhview.htm
@@ -11,8 +11,8 @@
 <H1 CLASS="Head"> CVS Resource History view</H1>
 
 <P CLASS="Intro"> This view provides a list of all the revisions of a resource 
-  in the repository. From this view you can compare two revisions, replace (get 
-  sticky) or revert (get contents) the corresponing workspace file to the revision, 
+  in the repository. From this view you can compare two revisions, replace (Get 
+  Sticky Revision) or revert (Get Contents) the corresponing workspace file to the revision, 
   or open an editor on a revision.
 <P CLASS="Para">Here is what the CVS Resource History View looks like:</P>
 <P CLASS="Para"><img align="texttop" border="0" src="../images/Image216_history_view.jpg" alt="CVS Resource History View"></P>
