--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12d.htm
@@ -32,10 +32,13 @@ operating system's color scheme).</P>
 </TR>
 <TR>
 <TD height="21" valign="top" align="left">
+<p CLASS="Para">
 <b>2.</b>
+</p>
 </TD>
 <TD height="21" valign="top" align="left">
-Select the JaneQUser project.
+<p CLASS="Para">
+Select the JaneQUser project.</p>
 </TD>
 </TR>
 <TR>
