--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-31c.htm
@@ -18,10 +18,13 @@ You can use the Import wizard to copy resources into the workbench.</P>
 <TBODY>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>1.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
-Select the project JaneQUser
+<p CLASS="Para">
+Select the project JaneQUser</p>
 </TD>
 </TR>
 <TR>
@@ -96,7 +99,9 @@ be filled in with the name of the project (JaneQUser).&nbsp; </P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>7.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">You can change the destination project or folder by clicking
