--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34d.htm
@@ -32,20 +32,26 @@ Close any editors that are open on JanesINIFile.ini.&nbsp;</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>2.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 In your file system explorer, navigate to the directory where you installed the
-workbench and go into the workspace subdirectory.
+workbench and go into the workspace subdirectory.</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>3.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 Edit the file JanesINIFile.ini and save it . Do not use the workbench's
-Navigator to open the editor.
+Navigator to open the editor.</p>
 </TD>
 </TR>
 <TR>
@@ -61,12 +67,15 @@ Return to the workbench and in the Navigator view, select the project JaneQUser.
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>5.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 Choose Refresh from the project's context menu. This instructs the
 workbench to look for any changes to the project that have been made in the
-local file system by external tools.
+local file system by external tools.</p>
 </TD>
 </TR>
 <TR>
@@ -82,11 +91,14 @@ Select the file JanesINIFile.ini .</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>7.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 For a little variety choose Open With &gt; Text Editor from the file's
-popup menu.
+popup menu.</p>
 </TD>
 </TR>
 <TR>
