--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35.htm
@@ -64,13 +64,16 @@ setup:</P>
     </tr>
     <tr>
       <td valign="top" align="left">
+        <p CLASS="Para">
         <b>5.</b>
+        </p>
       </td>
       <td valign="top" align="left">
+        <p CLASS="Para">
         Select the project JaneQUser. Using the project's popup menu create a folder named
         JanesOtherFolder.&nbsp;
         <blockquote>
-          <p><img align="texttop" border="0" src="../images/Image45_setup.jpg" alt="Navigator view" ></p>
+          <p CLASS="Para"><img align="texttop" border="0" src="../images/Image45_setup.jpg" alt="Navigator view" width="218" height="215" ></p>
         </blockquote>
       </td>
     </tr>
