--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
@@ -18,10 +18,13 @@ JanesOtherFolder we are ready to rename something.&nbsp;</p>
 <TBODY>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>1.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
-In the Navigator view, select JanesFile.txt in JanesOtherFolder.
+<p CLASS="Para">
+In the Navigator view, select JanesFile.txt in JanesOtherFolder.</p>
 </TD>
 </TR>
 <TR>
@@ -103,10 +106,13 @@ you to type in the new name. Change the folder name to be JanesSecondFolder.</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>4.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
-Rename the folder back to its original name (JanesOtherFolder).
+<p CLASS="Para">
+Rename the folder back to its original name (JanesOtherFolder).</p>
 </TD>
 </TR>
 </TBODY>
