--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -25,16 +25,19 @@ view.&nbsp;</p>
 <TBODY>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>1.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 The title of the search view
 provides us with a description of the
 search we just performed. If the view is too narrow to display the full
 description, hover over the title of the Search view. Observe that hover help appears and
 provides the full description.&nbsp;
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image51_search_hover.jpg" alt="Search view"></p>
+  <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_hover.jpg" alt="Search view" width="325" height="193"></p>
 </blockquote>
 </TD>
 </TR>
@@ -57,78 +60,101 @@ Search view automatically opens the file.</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>3.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 It is sometimes useful to remove uninteresting matches from the search results. The Search view's popup menu
 provides two ways to remove matches:
 <ul>
-  <li>Remove Current Match - Removes the actual match that you are currently looking
+  <li>
+    <p CLASS="Para">Remove Current Match - Removes the actual match that you are currently looking
     at. If a file contains multiple matches, as in our case, only the current
     match is removed.</li>
-  <li>Remove Selected Match - Removes the file entry and all matches in it. </li>
+  <li>
+    <p CLASS="Para">Remove Selected Match - Removes the file entry and all matches in it. </li>
 </ul>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>4.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 Choose Remove Current Match from the popup. Notice how JanesFile.txt only has one match
-left.
+left.</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>5.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
-Select&nbsp;JanesText.txt in the Search view.
+<p CLASS="Para">
+Select&nbsp;JanesText.txt in the Search view.</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>6.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 Choose Remove Selected Match from the popup menu. 
-<p>The Search view now shows only one match for JanesFile.txt</p>
+<p CLASS="Para">The Search view now shows only one match for JanesFile.txt</p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image51_search_reduced.jpg" alt="Search view" ></p>
+  <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_reduced.jpg" alt="Search view" width="425" height="150" ></p>
 </blockquote>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>7.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 Perform a second search for &quot;that&quot; by clicking on the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg"  alt="Search button" >
- in the workbench's toolbar.
+ in the workbench's toolbar.</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>8.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 The Search view updates to show the results of the new search. 
-<p>You can move back and forth between your two search results using the drop
+<p CLASS="Para">You can move back and forth between your two search results using the drop
 down button on the Search views toolbar. </p>
 <blockquote>
-  <p><img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view"></p>
+  <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view"></p>
 </blockquote>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>9.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view
 switches back to show you the original search. On the context menu choose Search
-Again to repeat the initial search. Notice that once again we have 4 matches.
+Again to repeat the initial search. Notice that once again we have 4 matches.</p>
 </TD>
 </TR>
 </TBODY>
