--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
@@ -105,33 +105,44 @@ view.</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>7.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 After you have added the new task, click in the editor on the first line or any
-other line above the line with which the new task is associated.
+other line above the line with which the new task is associated.</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>8.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
-Add several lines of text to the file at this point.
+<p CLASS="Para">
+Add several lines of text to the file at this point.</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>9.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 Notice that as you add lines of text above it, the task marker moves down in the marker bar in order to remain with the associated line in the file.
-The line number in the Tasks view is updated when the file is saved.&nbsp;
+The line number in the Tasks view is updated when the file is saved.&nbsp;</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>10.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
@@ -140,7 +151,9 @@ In the marker bar, access the context menu from the task you just created.</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>11.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
@@ -149,7 +162,9 @@ From the marker's context menu, select Remove Task.</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>12.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
