--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39e.htm
@@ -82,22 +82,28 @@ Dock the editor on a directional arrow drop cursor so that two editors appear in
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>6.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+ <p CLASS="Para">
  Notice that you can also resize each editor as well as the entire editor area to
- accommodate the editors and views as necessary.&nbsp;
+ accommodate the editors and views as necessary.&nbsp;</p>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>7.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
+<p CLASS="Para">
 It is important to observe the color of an editor tab (in the figure below there
 are two groups, one above the other)
-<p><b>blue</b> - indicates that the editor is currently active</p>
-<p><b>white</b> - indicates that the editor was the last
+<p CLASS="Para"><b>blue</b> - indicates that the editor is currently active</p>
+<p CLASS="Para"><b>white</b> - indicates that the editor was the last
 active editor. If there is an active view, it will be the editor that the active view is currently working with.
 This is important when working with views like the Outline and Properties that
 work closely with the editor.
