--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
@@ -42,14 +42,17 @@ workbench also allows you to save this layout for future use.</P>
       </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>4.</b></td>
-      <td valign="top" align="left">The Save Perspective As dialog
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>4.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">The Save Perspective As dialog
         allows you to redefine and existing perspective or create a new perspective.
-        <p>Click OK to update the Resource perspective and Yes to the subsequent
+        <p CLASS="Para">Click OK to update the Resource perspective and Yes to the subsequent
         confirmation dialog. The new perspective layout will be used if you
         reset the perspective or open a new one.</p>
         <blockquote>
-          <p><img align="texttop" border="0" src="../images/Image71_pers_save.jpg" alt="Saving Perspective" width="272" height="401"></p>
+          <p CLASS="Para"><img align="texttop" border="0" src="../images/Image71_pers_save.jpg" alt="Saving Perspective" width="272" height="401"></p>
         </blockquote>
       </td>
     </tr>
@@ -128,12 +131,16 @@ Resource perspective to its original layout proceed as follows:</p>
       </td>
     </tr>
     <tr>
-      <td valign="top" align="left"><b>4.</b></td>
-      <td valign="top" align="left">We have undone any changes to
+      <td valign="top" align="left">
+        <p CLASS="Para"><b>4.</b></p>
+      </td>
+      <td valign="top" align="left">
+        <p CLASS="Para">We have undone any changes to
         the saved state
         of the perspective. If we also want to
         update the current copy of the Resource perspective that we are working
-        with we must also choose Window &gt; Reset Perspective from the workbench's menubar.&nbsp;</td>
+        with we must also choose Window &gt; Reset Perspective from the workbench's menubar.&nbsp;</p>
+      </td>
     </tr>
   </tbody>
 </table>
