--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52e.htm
@@ -45,10 +45,14 @@ parts to the compare editor's local toolbar. The right group of local toolbar bu
     </tr>
     <tr>
       <td valign="top" align="left">
+        <p CLASS="Para">
         <b>3.</b>
+        </p>
       </td>
-      <td valign="top" align="left">Click the Select Previous Change
-        button.</td>
+      <td valign="top" align="left">
+        <p CLASS="Para">Click the Select Previous Change
+        button.</p>
+      </td>
     </tr>
   </tbody>
 </table>
@@ -85,21 +89,25 @@ The Copy current change buttons allow you to merge a single change.&nbsp;&nbsp;<
       <td valign="top" align="left">
         <p CLASS="Para"><b>2.</b></p>
       </td>
-      <td valign="top" align="left">Click&nbsp;Copy
+      <td valign="top" align="left">
+        <p CLASS="Para">Click&nbsp;Copy
         current change from right to
         left <img align="texttop" border="0" src="../images/Image80_compare_rl.jpg"  alt="Compare editor right to left button" >
         button. Observe
         that the selected text from the right file is copied to the left file.
-        <p><img align="texttop" border="0" src="../images/Image80_compare_after.jpg" alt="Compare editor" ></p>
+        <p CLASS="Para"><img align="texttop" border="0" src="../images/Image80_compare_after.jpg" alt="Compare editor" width="448" height="149" ></p>
       </td>
     </tr>
     <tr>
       <td valign="top" align="left">
+        <p CLASS="Para">
         <b>3.</b>
+        </p>
       </td>
-      <td valign="top" align="left">Close the compare editor and
+      <td valign="top" align="left">
+        <p CLASS="Para">Close the compare editor and
         choose Yes to save the changes. Alternatively you can save the changes
-        by choosing File &gt; Save (Ctrl+S).&nbsp;
+        by choosing File &gt; Save (Ctrl+S).&nbsp;</p>
       </td>
     </tr>
   </tbody>
