--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-12c.htm
@@ -70,10 +70,13 @@ field and click OK. </P>
 </TR>
 <TR>
 <TD height="21" valign="top" align="left">
+<p CLASS="Para">
 <b>5.</b>
+</p>
 </TD>
 <TD height="21" valign="top" align="left">
-The Navigator will select the file JanesFile.txt.
+<p CLASS="Para">
+The Navigator will select the file JanesFile.txt.</p>
 </TD>
 </TR>
 </TBODY>
