--- a/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
@@ -15,36 +15,31 @@ types) specified in the search dialog.</p>
 Here is what the Search view looks like:</p>
 <p class="Para">
 <img align="Texttop" border="0" src="../images/Image237_search_view.jpg" alt="Search View"></p>
-<p class="Para">
-&nbsp;</p>
-<div class="Topic">
 <h2>
-Show Next Match</h2>
-<p class="Para">
+Toolbar</h2>
+<p>The toolbar in the Search view contains the following buttons:</p>
+<dl>
+<dt>
+Show Next Match</dt>
+<dd>
 This command highlights the next match of the search
-expression in the editor area, opening the file if required.</p>
-</div>
-<div class="Topic">
-<h2 class="Head">
-Show Previous Match</h2>
-<p class="Para">
+expression in the editor area, opening the file if required.</dd>
+<dt>Show Previous Match</dt>
+<dd>
 This command highlights the previous match of the
-search expression in the editor area, opening the file if required.</p>
-</div>
-<div class="Topic"><h2 class="Head">Remove Selected Matches</h2>
-<p class="Head">Removes all highlighted matches from the search results.</p>
-<h2 class="Head">Search</h2>
-<p class="Para">
-This command opens the Search dialog.</p>
-</div>
-<div class="Topic">
-<h2 class="Head">
-Previous Search Results</h2>
-<p class="Para">
+search expression in the editor area, opening the file if required.</dd>
+<dt>Remove Selected Matches</dt>
+<dd>Removes all highlighted matches from the search results.</dd>
+<dt>Search</dt>
+<dd>
+This command opens the Search dialog.</dd>
+<dt>
+Previous Search Results</dt>
+<dd>
 This command allows you to browse previously
 conducted searches and repeat a previous search.&nbsp; You can select a previous
-search from the drop-down menu or clear the search history.</p>
-</div>
+search from the drop-down menu or clear the search history.<dd>
+</dl>
 
 <p><br>
 <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
