--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
@@ -18,14 +18,14 @@
 
 <p CLASS="Para" Label="Type">The <i> main toolbar</i>, sometimes called the workbench toolbar,
 is displayed at the top of
-the workbench window, directly beneath the menu bar. The contents of this toolbar change based on the active editor.&nbsp;Items in the toolbar
+the workbench window, directly beneath the menu bar. The contents of this toolbar change based on the active perspective. Items in the toolbar
 might be enabled or disabled based on
 the state of either the active view or editor. Sections of the main toolbar can be rearranged using the mouse.
 </p>
 
 
 <p CLASS="Para" Label="Type">There are also individual <i>view toolbars</i>,
-which appear just below the title
+which appear in the title
 bar of a view. Actions in a view's toolbar apply only to the view in which
 they appear. Some view toolbars include a <b>Menu</b> button, shown as an
 inverted triangle, that contains actions for that view.</p>
