Renamed Ant "scripts" to "build files".

--- a/bundles/org.eclipse.platform.doc.isv/guide/ant.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant.htm
@@ -13,7 +13,7 @@ Platform Ant support
 <BODY BGCOLOR="#ffffff">
 <h1>Platform Ant support</h1>
 <p>Ant is a Java-based build tool that uses XML-based configuration files to
-describe build tasks.&nbsp; The Eclipse platform allows you to run Ant scripts
+describe build tasks.&nbsp; The Eclipse platform allows you to run Ant build files
 from your plug-in and contribute new Ant <a href="../reference/extension-points/org_eclipse_ant_core_antTasks.html">tasks</a> 
 and <a href="../reference/extension-points/org_eclipse_ant_core_antTypes.html">
 types</a> using extension points.&nbsp; The rest of this discussion assumes that you have a basic
