--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_running_script_programmatically.htm
@@ -5,16 +5,16 @@
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 <TITLE>
-Running Ant scripts programmatically
+Running Ant build files programmatically
 </TITLE>
 
 <link rel="stylesheet" type="text/css" HREF="../book.css">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h2>
-Running Ant scripts programmatically</h2>
+Running Ant build files programmatically</h2>
 <p>
-The Ant support built into Eclipse allows plug-ins to programmatically run Ant scripts.
+The Ant support built into Eclipse allows plug-ins to programmatically run Ant build files.
 This is done via the <a href="../reference/api/org/eclipse/ant/core/AntRunner.html"><b>AntRunner</b></a> 
 class included in the <b> org.eclipse.ant.core</b> plug-in.
 </p>
@@ -29,7 +29,7 @@ public class Running {
 public static void main(String[] args) throws Exception {
 	IProgressMonitor monitor = ...
 	AntRunner runner = new AntRunner();
-	runner.setBuildFileLocation(&quot;c:/scripts/build.xml&quot;);
+	runner.setBuildFileLocation(&quot;c:/buildfiles/build.xml&quot;);
 	runner.setArguments(&quot;-Dmessage=Building -verbose&quot;);
 	runner.run(monitor);
 }
