--- a/bundles/org.eclipse.platform.doc.isv/guide/ant_eclipse_tasks.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/ant_eclipse_tasks.htm
@@ -14,7 +14,7 @@ Ant tasks provided by the platform
 <h2>
 Ant tasks provided by the platform</h2>
 <p>The platform provides some useful Ant tasks and properties that 
-interact with the workspace. They can be used with scripts running inside the
+interact with the workspace. They can be used with build files running inside the
 platform.</p>
 
 
