--- a/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
@@ -15,8 +15,7 @@
 
 <p>The online help system provides access to the documentation, and lets you 
 browse, search, and print it. The documentation is organized into sets of 
-information that are listed on the Bookshelf, the first view the help system 
-opens to. These,
+information that are roughly analogous to books. These,
 along with a full-text search engine and context-sensitive interface help, are
 designed to help you find the information you need.</p>
 
