--- a/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cexttools.htm
@@ -13,7 +13,7 @@
 External tools</h1>
 
 <p CLASS="Para">External tools allow you to configure and run programs,
-batch files, Ant build files, etc. using the Eclipse Workbench. You can
+batch files, Ant build files, and so on, using the workbench. You can
 save these external tool configurations and run them at a later time.
 
 <p CLASS="Para">Output from external tools is displayed in the log 
@@ -23,7 +23,7 @@ console view.</p>
 for a project. These external tools will run in the specified order every
 time a project is built.
 
-<p CLASS="Para">The following list of variables are available when you
+<p CLASS="Para">The following variables are available when you
 configure external tools to run. These variables are automatically expanded
 each time the external tool is run.
 <blockquote>
