Renamed Ant "scripts" to "build files".

--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-83.htm
@@ -13,7 +13,7 @@ Adding new tasks and types</H1>
 
 <P CLASS="Para">
 It is possible to add new Ant tasks and types through the Ant preferences page. 
-These tasks and types will be available for scripts running in the workbench 
+These tasks and types will be available for build files running in the workbench 
 without having to use taskdef or typedef in the script declaration (for more on 
 taskdef or typedef see the Ant documentation in
 <a href="http://jakarta.apache.org/ant/" target="_blank">http://jakarta.apache.org/ant</a> ). The 
