--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-85.htm
@@ -23,7 +23,7 @@ according to your needs. The <b>Restore Defaults</b> button restores the Ant cla
 </P>
 
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="./tasks-89.htm">Running Ant scripts</a><br>
+<a href="./tasks-89.htm">Running Ant build files</a><br>
 <a href="../tasks/tasks-90.htm">Running external tools</a><br>
 </P>
 
