--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-86.htm
@@ -26,7 +26,7 @@ in the external tools preferences page. The preferences page can be accessed thr
 <b>Window > Preferences > External Tools > Ant</b>. The two JARs related to Ant 1.4.1 are <b>ant.jar</b>
 and <b>jakarta-ant-1.4.1-optional.jar</b>. Removing these JARs and adding the ones from the desired version
 of Ant should be enough. </p>
-<p CLASS="Para">After changing the Ant JARs through the Ant classpath preference, all future Ant scripts
+<p CLASS="Para">After changing the Ant JARs through the Ant classpath preference, all future Ant build files
 runs will use the updated version instead of the default.
 The <b>Restore Defaults</b> button restores the Ant classpath to its original state.</p>
 <br>
@@ -75,7 +75,7 @@ effect in the script execution.</p>
 </P>
 
 <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="./tasks-89.htm">Running Ant scripts</a><br>
+<a href="./tasks-89.htm">Running Ant build files</a><br>
 <a href="../tasks/tasks-90.htm">Running external tools</a><br>
 <a href="../tasks/tasks-85.htm">Expanding the Ant classpath</a><br>
 <a href="../tasks/tasks-83.htm">Adding new tasks and types</a><br>
