--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-89.htm
@@ -4,12 +4,12 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Running Ant scripts in the workbench</title>
+<title>Running Ant build files in the workbench</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Running Ant scripts</H1>
+Running Ant build files</H1>
 <p CLASS="Para">To run an Ant script in the workbench:</p>
 <ol>
   <li>
