--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-90.htm
@@ -47,7 +47,7 @@ Tools Builders</b> and configure accordingly.</p>
 </P>
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="./tasks-89.htm">Running Ant scripts</a><br>
+<a href="./tasks-89.htm">Running Ant build files</a><br>
 </p>
 
 <p>&nbsp;<br>
