--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/accessmain.htm
@@ -1,5 +1,5 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
-<!doctype html public "-//w3c//dtd html 3.2 final//en">
 <html>
 
  <head>
