--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -1,4 +1,4 @@
-<!doctype html public "-//w3c//dtd html 3.2 final//en">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <head>
  <title>Navigating the user interface by using the keyboard</title>
